# memory-page-backend

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  start.sh  start_dev.sh  start_prod.sh
.github/workflows/: depoly.yml  depoly_dev.yml  depoly_prod.yml
app/: main.py
app/base/: base_document.py  base_exception.py  base_response.py  settings.py
app/core/: exception.py  settings.py  swagger_responses.py
app/db/: __init__.py  database.py
app/domain/board/: collection.py  document.py  request.py  response.py  router.py  service.py
app/domain/board/login/: request.py  response.py  router.py  service.py
app/domain/developer/: router.py
app/domain/memo/: collection.py  document.py  request.py  response.py  router.py  service.py
app/tests/: conftest.py  test_auth.py  test_board.py  test_init.py  test_main.py
app/tests/mock/: mock_auth.py  mock_board.py
app/utils/: jwt.py  responses_creater.py  security.py
