[tool.poetry]
name = "memory-page-backend"
version = "0.1.0"
description = ""
authors = ["LeeInGyu <developLee20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
pydantic-settings = "^2.6.1"
motor = "^3.6.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
