[tool.poetry]
name = "memory-page-backend"
version = "0.1.0"
description = ""
authors = ["LeeInGyu <developLee20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
pydantic-settings = "^2.6.1"
motor = "^3.6.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
mypy = "^1.13.0"
pytest-asyncio = "^0.24.0"
pytest-anyio = "^0.0.0"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
bcrypt = "4.0.1"
httpx = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
